Handle odd edge cases as well as implement token refreshing

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -107,5 +107,6 @@
   </picture>
   
   <script src="flutter_bootstrap.js" async=""></script>
+  <script src="main.dart.js" async=""></script>
 
 </body></html>
