--- a/app/web/index.html
+++ b/app/web/index.html
@@ -16,19 +16,28 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+
+  <meta property="og:title" content="Varta">
+
+  <meta name="description" content="One-way multi-channel school communications app">
+  <meta name="og:description" content="One-way multi-channel school communications app">
+
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="app">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Varta">
+  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <title>app</title>
+  <title>Varta</title>
   <link rel="manifest" href="manifest.json">
+
+  <meta property="og:image" content="https://res.cloudinary.com/dzx48hsih/image/upload/v1732352844/irgpnzkk3qyzoa9esasg.png">
+  <meta property="og:image:width" content="512">
+  <meta property="og:image:height" content="512">
   
   
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
@@ -41,7 +50,7 @@
     body {
       margin: 0;
       min-height: 100%;
-      background-color: #191919;
+      background-color: #000000;
           background-size: 100% 100%;
     }
 
@@ -106,7 +115,9 @@
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
   
+  
   <script src="flutter_bootstrap.js" async=""></script>
-  <script src="main.dart.js" async=""></script>
+  <script src="main.dart.js?version=1.0.3" async=""></script>
+
 
 </body></html>
